--- a/src/server/index.html
+++ b/src/server/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
 <h1>WebMUD Server</h1>
+<style>
+    .mainGame{
+        background-color: ghostwhite;
+        border: 5px solid black;
+        height: 1100px;
+        width: 50%;
+    }
+
+    textarea#chat
+    {
+        resize: none;
+    }
+</style>
+
+<body>
+<div class = "mainGame">
+    <p style ="color:black;">testing size</p>
+
+</div>
+
+<br><br>
+
+<textarea>Chat testing to put together</textarea>
+
+</body>
+</html>
