--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -13,6 +13,8 @@
   <body>
     <h1>WebMUD Development Interface</h1>
 
+    <a href="/doc"><h2>Docs</h2></a>
+
     <section>
 
       <h2><a href="/server">Server</a></h2>
