--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -16,7 +16,6 @@
     <a href="/doc"><h2>Docs</h2></a>
 
     <section>
-
       <h2><a href="/server">Server</a></h2>
 
       <div class="console">
@@ -37,15 +36,15 @@
           placeholder=">"
         />
       </div>
-
     </section>
 
     <section>
-
-      <h2><a href="/client">Clients</a> <button id="create-client" class="info">New Client</button></h2>
+      <h2>
+        <a href="/client">Clients</a>
+        <button id="create-client" class="info">New Client</button>
+      </h2>
 
       <div id="clients" class="clients"></div>
-
     </section>
   </body>
 </html>
