start implementing client connection process

--- a/public/server/index.html
+++ b/public/server/index.html
@@ -13,6 +13,15 @@
   <body>
     <h1>WebMUD Server</h1>
 
+    <div>
+      <p>
+        <a id="joinLink" href="#" rel="noopener noreferrer" target="_blank">Join game in a new tab</a>
+      </p>
+      <p>
+        Invite link: <span class="joinlink" id="joinURL">...</span>
+      </p>
+    </div>
+
     <div class="console">
       <div class="console-section">
         Console
