linter config changes

--- a/public/server/index.html
+++ b/public/server/index.html
@@ -15,11 +15,11 @@
 
     <div>
       <p>
-        <a id="joinLink" href="#" rel="noopener noreferrer" target="_blank">Join game in a new tab</a>
+        <a id="joinLink" href="#" rel="noopener noreferrer" target="_blank"
+          >Join game in a new tab</a
+        >
       </p>
-      <p>
-        Invite link: <span class="joinlink" id="joinURL">...</span>
-      </p>
+      <p>Invite link: <span class="joinlink" id="joinURL">...</span></p>
     </div>
 
     <div class="console">
