--- a/public/server/index.html
+++ b/public/server/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="/theme.css" />
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/console.css" />
     <link rel="stylesheet" href="main.css" />
 
     <script defer="defer" src="/server/main.bundle.js"></script>
