Doing UI branch right this  time

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -14,10 +14,12 @@
   <body>
     <h1>WebMUD Development Interface</h1>
 
-    <a href="/doc"><h2>Docs</h2></a>
+    <a href="/docs"><h2>Docs</h2></a>
 
     <section>
       <h2><a href="/server">Server</a></h2>
+
+      <div id="client-list"></div>
 
       <div class="console">
         <div class="console-section">
