Commiting UI changes removing javascript

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="main.css" />
 
     <script defer="defer" src="/client/main.bundle.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
     
 <body>
@@ -23,7 +22,7 @@
                 <ul class="menu">
                     <li class="navT">
                         <a href="#">Menu</a>
-                        <i class="fas fa-arrow-down"</i>
+                        <i class="fas fa-arrow-down"></i>
                         <div class="navT-items">
                             <a href="#">Button 1</a>
                             <a href="#">Button 2</a>
@@ -34,7 +33,6 @@
             </nav>
         </div>
     </header>
-    <script src="scriptDropDown.js"></script>
     <div class="console">
         <div class="console-section">
             Console
