--- a/public/server/index.html
+++ b/public/server/index.html
@@ -12,32 +12,36 @@
     <script defer="defer" src="/server/main.bundle.js"></script>
   </head>
   <body>
-      <h1>WebMUD Server</h1>
+    <h1>WebMUD Server</h1>
 
-      <div>
-          <p>
-              <a id="joinLink" href="#" rel="noopener noreferrer" target="_blank">Join game in a new tab</a>
-          </p>
-          <p>Invite link: <span class="joinlink" id="joinURL">...</span></p>
+    <div>
+      <p>
+        <a id="joinLink" href="#" rel="noopener noreferrer" target="_blank"
+          >Join game in a new tab</a
+        >
+      </p>
+      <p>Invite link: <span class="joinlink" id="joinURL">...</span></p>
+    </div>
+
+    <div id="client-list"></div>
+
+    <div class="console">
+      <div class="console-section">
+        Console
+        <span class="float-right">
+          <label for="enable-debug">Debug</label>
+          <input type="checkbox" id="enable-debug" />
+        </span>
       </div>
-
-      <div id="client-list"></div>
-
-      <div class="console">
-          <div class="console-section">
-              Console
-              <span class="float-right">
-                  <label for="enable-debug">Debug</label>
-                  <input type="checkbox" id="enable-debug" />
-              </span>
-          </div>
-          <div class="console-section log">
-              <div class="text-output" id="console-output"></div>
-          </div>
-          <input class="console-section command"
-                 type="text"
-                 id="console-input"
-                 placeholder=">" />
+      <div class="console-section log">
+        <div class="text-output" id="console-output"></div>
       </div>
+      <input
+        class="console-section command"
+        type="text"
+        id="console-input"
+        placeholder=">"
+      />
+    </div>
   </body>
 </html>
