--- a/src/server/index.html
+++ b/src/server/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
-<h1>WebMUD Server</h1>
-<style>
-    .mainGame{
-        background-color: ghostwhite;
-        border: 5px solid black;
-        height: 1100px;
-        width: 50%;
+  <h1>WebMUD Server</h1>
+  <style>
+    .mainGame {
+      background-color: ghostwhite;
+      border: 5px solid black;
+      height: 1100px;
+      width: 50%;
     }
 
-    textarea#chat
-    {
-        resize: none;
+    textarea#chat {
+      resize: none;
     }
-</style>
+  </style>
 
-<body>
-<div class = "mainGame">
-    <p style ="color:black;">testing size</p>
+  <body>
+    <div class="mainGame">
+      <p style="color: black">testing size</p>
+    </div>
 
-</div>
+    <br /><br />
 
-<br><br>
-
-<textarea>Chat testing to put together</textarea>
-
-</body>
+    <textarea>Chat testing to put together</textarea>
+  </body>
 </html>
